--- a/HTML/profile/css/profile.css
+++ b/HTML/profile/css/profile.css
@@ -8,43 +8,43 @@ ul, ol {list-style: none;}
 a {text-decoration: none; color: #111;}
 input, textarea {outline: none;}
 
-#pro {
+#wrapper {
     width: 1000px;
     margin-top:20px;
 }
-#pro > section {width: 100%;}
-#pro > section > div {display: block;}
+#wrapper > section {width: 100%;}
+#wrapper > section > div {display: block;}
 
-#pro > section > .myProfile {
+#wrapper > section > .myProfile {
     width: 100%;
     height: 200px;
     position: relative; 
     display: block; 
     border-bottom: 1px solid #e9e9e9; 
 }
-#pro > section > .myProfile > .proPhoto {
+#wrapper > section > .myProfile > .proPhoto {
     float: left; 
     margin-top: 20px; 
     margin-left:100px; 
     margin-right:100px; 
     width: 200px;
 }
-#pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
-#pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
-#pro > section > .myProfile > .detail {float:left; width:500px;}
-#pro > section > .myProfile > .detail > .pTop {
+#wrapper > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
+#wrapper > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
+#wrapper > section > .myProfile > .detail {float:left; width:500px;}
+#wrapper > section > .myProfile > .detail > .pTop {
     display: block; 
     margin-top: 30px; 
     position: relative; 
     width: auto; 
     height: 40px;
 }
-#pro > section > .myProfile > .detail > .pTop > .userName {
+#wrapper > section > .myProfile > .detail > .pTop > .userName {
     float:left; 
     padding-right:15px; 
     font-size: 24px;
 }
-#pro > section > .myProfile > .detail > .pTop > .button {
+#wrapper > section > .myProfile > .detail > .pTop > .button {
     margin: 2px;
     padding: 9px 15px;
     background: #e9e9e9;
@@ -52,56 +52,56 @@ input, textarea {outline: none;}
     top: 10px;
     position: inherit;
 }
-#pro > section > .myProfile > .detail > .pTop > #follow {
+#wrapper > section > .myProfile > .detail > .pTop > #follow {
     background: #32a4ff; 
     color: aliceblue; 
     font-weight: bold;
 }
-#pro > section > .myProfile > .detail > .pMiddle {
+#wrapper > section > .myProfile > .detail > .pMiddle {
     display: block; 
     margin-top: 20px; 
     width: 500px; 
     height: 40px; 
     overflow: hidden;
 }
-#pro > section > .myProfile > .detail > .pMiddle > li {
+#wrapper > section > .myProfile > .detail > .pMiddle > li {
     box-sizing: border-box; 
     margin-right:35px; 
     float: left; 
     font-size: 16px; 
     font-weight: bold;
 }
-#pro > section > .myProfile > .detail > .pMiddle > li > span {
+#wrapper > section > .myProfile > .detail > .pMiddle > li > span {
     font-size:15px; 
     width: 100px; 
     margin-right: 5px;
 }
-#pro > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
+#wrapper > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
 
-#pro > section > .myNav {
+#wrapper > section > .myNav {
     padding-top: 30px; 
     width: 400px; 
     margin-right: 300px; 
     margin-left: 300px; 
     text-align: center;
 }
-#pro > section > .myNav > div:nth-child(1) {margin-left: 50px;}
-#pro > section > .myNav > div {
+#wrapper > section > .myNav > div:nth-child(1) {margin-left: 50px;}
+#wrapper > section > .myNav > div {
     float: left; 
     padding-left: 30px; 
     padding-right: 30px;
 }
-#pro > section > .myNav > div > a {color: #888;}
-#pro > section > .myNav > div > a:hover {color: #111;}
+#wrapper > section > .myNav > div > a {color: #888;}
+#wrapper > section > .myNav > div > a:hover {color: #111;}
 
-#pro > section > .myList > .pic {
+#wrapper > section > .myList > .pic {
     float:left; 
     margin: 5px; 
     overflow: hidden;
 }
-#pro > section > .myList > .pic > a {display: block;} 
-#pro > section > .myList > .pic > a > img {max-width: 300px; max-height: 300px;}
-#pro > section > .myList {margin-top: 50px;}
+#wrapper > section > .myList > .pic > a {display: block;} 
+#wrapper > section > .myList > .pic > a > img {max-width: 300px; max-height: 300px;}
+#wrapper > section > .myList {margin-top: 50px;}
 
   #following {display: none;}
 
