--- a/Spring/Photostagram/src/main/resources/static/css/post.css
+++ b/Spring/Photostagram/src/main/resources/static/css/post.css
@@ -1,4 +1,4 @@
-* {
+    * {
     margin: 0;
     padding: 0;
     font: normal 12px 'Arial';
@@ -91,68 +91,8 @@
       margin-top: 10px;
       margin-bottom: 20px;
     }
-    .proImg {
-      margin-right: 10px;
-      float: left;
-      height: 30px;
-    }
-
-    .listReply > ul > li {
-      width: 450px;
-      display: block;
-      float: left;
-      margin-bottom: 8px;
-    }
-    .listReply > ul > li > .reply {width: 390px; margin-bottom: 3px;}
     #post > .contents > ul > li > .reply {width: 410px;}
-    .reply > h1 {word-break: break-all;}
-    .reply {
-      position: relative;
-      display: block;
-      float: left;
-      top: 3px;
-    }
-    .reply > h1 > span {
-      float: left;
-      font-size: 13px;
-      font-weight: bold;
-      margin-right: 10px;
-    }
-    .reply > h1 {float: left;}
-    .reply > a {color: #0095f6; width: 350px; display: block;}
-    .reply > div {
-      margin-top: 5px;
-      margin-left: 1px;
-      color: #a9a9a9;
-      font-weight: bold;
-      float: left;
-    }
-    .reply > div > a {color: #a9a9a9; font-weight: bold;}
     #post > .contents > ul > li > label > a {float: left; color: #a9a9a9; font-weight: bold;}
-    #reHeart {
-      position: relative;
-      float: right;
-      top: 12px;
-      background-image: url('../img/background01.png');
-      margin-right: 5px;
-      width: 12px;
-      height: 11px;
-      font-size: 0;
-    }
-    .reWhite {background-position: -323px -274px; }
-    .reRed {background-position: -323px -287px;}
-    .showReply {
-      position: relative;
-      top: 10px;
-      margin-left: 30px;
-      width: 450px;
-      display: block;
-      float: left;
-      margin-bottom: 20px;
-    }
-    .listReply {width: 450px; margin-top: 20px; display: block; height: auto; position: relative; float: left;}
-    .reReply {height: auto; float: left; width: 450px;}
-    .reHide {display: none;}
     #post > .contents > ul > li > .showReply > a {float: left; color: #a9a9a9; font-weight: bold;}
     #post > .contents > div {position: relative;}
     #post > .contents > div > div:nth-child(1) {
@@ -208,6 +148,88 @@
       color: #32a4ff;
     }
 
+
+
+    .listReply {
+        width: 450px;
+        margin-top: 20px;
+        display: block;
+        height: auto;
+        position: relative;
+        float: left;
+    }
+    .listReply > ul > li {
+      width: 450px;
+      display: block;
+      float: left;
+      margin-bottom: 8px;
+    }
+    .listReply > ul > li > .reply {width: 390px; margin-bottom: 3px;}
+
+
+    .proImg {
+      margin-right: 10px;
+      float: left;
+      height: 30px;
+    }
+
+    .reply > h1 {word-break: break-all;}
+    .reply {
+      position: relative;
+      display: block;
+      float: left;
+      top: 3px;
+    }
+    .reply > h1 > span {
+      float: left;
+      font-size: 13px;
+      font-weight: bold;
+      margin-right: 10px;
+    }
+    .reply > h1 {float: left;}
+    .reply > a {color: #0095f6; width: 350px; display: block;}
+    .reply > div {
+      margin-top: 5px;
+      margin-left: 1px;
+      color: #a9a9a9;
+      font-weight: bold;
+      float: left;
+    }
+    .reply > div > a {color: #a9a9a9; font-weight: bold;}
+
+    .reReply {
+        height: auto;
+        float: left;
+        width: 450px;
+    }
+    .reHide {display: none;}
+    .reWhite {background-position: -323px -274px; }
+    .reRed {background-position: -323px -287px;}
+
+    .showReply {
+      position: relative;
+      top: 10px;
+      margin-left: 30px;
+      width: 450px;
+      display: block;
+      float: left;
+      margin-bottom: 20px;
+    }
+
+    #reHeart {
+      position: relative;
+      float: right;
+      top: 12px;
+      background-image: url('../img/background01.png');
+      margin-right: 5px;
+      width: 12px;
+      height: 11px;
+      font-size: 0;
+    }
+
+
+    /*********** 더보기 스타일 ***********/
+
     #more {
       border-top: 1px solid #e9e9e9;
       padding-top: 50px;
@@ -229,6 +251,9 @@
       margin-left: 25px;
     }
 
+
+    /*********** 모달 스타일 ***********/
+
     .pModal {
       display: none;
       position: fixed;
@@ -242,6 +267,7 @@
       -ms-overflow-style: none;
     }
     .pModal::-webkit-scrollbar {display: none;}
+
     #pCancel > .pContents {
       background-color: #fefefe;
       margin: 15% auto;
