--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -80,6 +80,9 @@ input, textarea {outline: none;}
     font-weight: bold;
     margin-left: 5px;
 }
+#pro > section > .myProfile > .detail > .pMiddle > li > a {font-size:15px;}
+#pro > section > .myProfile > .detail > .pMiddle > li > a > span {font-size:16px; font-weight:bold; margin-left:5px;}
+
 #pro > section > .myProfile > .detail > .pAbout > .notice {font-size: 15px;}
 
 #pro > section > .myNav {
@@ -98,14 +101,17 @@ input, textarea {outline: none;}
 #pro > section > .myNav > div > a {color: #888;}
 #pro > section > .myNav > div > a:hover {color: #111;}
 
+#pro > section > .myList {margin-top: 50px;}
 #pro > section > .myList > .pic {
-    float:left; 
+    float:left;
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
     margin: 5px; 
     overflow: hidden;
 }
 #pro > section > .myList > .pic > a {display: block;} 
-#pro > section > .myList > .pic > a > img {max-width: 300px; max-height: 300px;}
-#pro > section > .myList {margin-top: 50px;}
+#pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover;}
 
   .fModal {
     display: none;
