--- a/Spring/Photostagram/src/main/resources/static/css/common.css
+++ b/Spring/Photostagram/src/main/resources/static/css/common.css
@@ -37,9 +37,23 @@ body {
   height: 22px;
 }
 
+.sprite_full_heart_icon_outline {
+  display: inline-block;
+  background: url("../img/background01.png") no-repeat -26px -261px;
+  width: 24px;
+  height: 22px;
+}
+
 .sprite_small_search_icon {
   display: inline-block;
   background: url("../img/background01.png") no-repeat -337px -246px;
+  width: 10px;
+  height: 10px;
+}
+
+.sprite_full_small_search_icon {
+  display: inline-block;
+  background: url("../img/background01.png") no-repeat -323px -287px;
   width: 10px;
   height: 10px;
 }
