--- a/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
@@ -21,5 +21,6 @@
 </body>
 <th:block layout:fragment="script">
   <script th:src="@{/js/member.js}"></script>
+  <script th:src="@{/js/register.js}"></script>
 </th:block>
 </html>
