--- a/Spring/Photostagram/src/main/resources/templates/member/birth.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/birth.html
@@ -3,33 +3,7 @@
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
 <th:block layout:fragment="main">
-<script>
-    $(function(){
-        $('#signin-btn').click(function(e){
-            e.preventDefault();
 
-            alert('birth!!!');
-
-            let year = $('select[name=year]').val();
-            let month = $('select[name=month]').val();
-            let day = $('select[name=day]').val();
-
-            let userData = sessionStorage.getItem("user");
-            let user = JSON.parse(userData);
-
-            // 1의 자리 수이면 앞에 0 붙이기
-            if(month < 10 && day < 10) {
-                month = '0' + month;
-                day = '0' + day;
-            }
-
-            user.birth = year + '-' + month + '-' + day;
-
-            sessionStorage.setItem("user", JSON.stringify(user));
-            location.href = '/Photostagram/member/email';
-        });
-    });
-</script>
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -63,7 +37,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn">
+                                    <button type="submit" class="btn-login" id="birth-next">
                                         다음
                                     </button>
                                 </div>
