--- a/Spring/Photostagram/src/main/resources/templates/member/email.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/email.html
@@ -3,14 +3,6 @@
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
 <th:block layout:fragment="main">
-<script>
-$(function(){
-    $('#signin-btn').click(function(e){
-        e.preventDefault();
-        location.href = '/Photostagram/member/terms';
-    });
-});
-</script>
 <main class="member">
     <div class="container">
         <div class="main-container">
@@ -34,7 +26,7 @@ $(function(){
                                     <input type="text" placeholder="인증코드">
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="signin-btn" onclick="location.href='/member/terms'">
+                                    <button type="submit" class="btn-login" id="email-next" onclick="location.href='/member/terms'">
                                         다음
                                     </button>
                                 </div>
