--- a/Spring/Photostagram/src/main/resources/templates/member/login.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/login.html
@@ -27,7 +27,7 @@
                             <form th:action="@{/member/login}" method="post">
                                 <div class="form-group">
                                     <div class="animate-input">
-                                        <span>
+                                        <span class="in-out">
                                             전화번호, 사용자 이름 또는 이메일
                                         </span>
                                         <input type="text" name="username" class="able">
@@ -35,7 +35,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="animate-input">
-                                        <span>
+                                        <span class="in-out">
                                             비밀번호
                                         </span>
                                         <input type="password" name="password" id="pass" class="able">
