--- a/Spring/Photostagram/src/main/resources/templates/member/terms.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/terms.html
@@ -3,52 +3,6 @@
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
        layout:decorate="layout/memberLayout">
 <th:block layout:fragment="main">
-<script>
-// 체크박스 모두 선택
-function selectAll(selectAll) {
-    const checkboxes = document.getElementsByName('check');
-
-    checkboxes.forEach((checkbox) => {
-        checkbox.checked = selectAll.checked;
-    })
-}
-
-$(function() {
-    $('#signin-btn').click(function() {
-        let isCheck1 = $('input[class=terms]').is(':checked');
-        let isCheck2 = $('input[class=data]').is(':checked');
-        let isCheck3 = $('input[class=locate]').is(':checked');
-
-        if(isCheck1 && isCheck2 && isCheck3) {
-            alert('체크 완료!!!');
-            let userData = sessionStorage.getItem("user"); // session에서 가져오기
-            console.log(userData);
-
-            $.ajax({
-                url: '/Photostagram/member/terms',
-                method: 'POST',
-                contentType:'application/json',
-                data: userData,
-                dataType: 'json',
-                success: function(data) {
-                    if(data.result = 1) {
-                        alert('회원가입이 완료되었습니다.');
-                        sessionStorage.clear();
-                        location.replace("/Photostagram/member/login");
-                    } else {
-                        alert('회원가입에 실패하였습니다.');
-                    }
-                }
-            });
-
-        } else {
-            alert('동의 체크를 하셔야 합니다.');
-            return false;
-        }
-    });
-});
-
-</script>
 
 <main class="member">
     <div class="container">
@@ -112,7 +66,7 @@ $(function() {
                                 </li>
                             </ul>
                             <div class="btn-group">
-                                <button type="submit" class="btn-login" id="signin-btn">
+                                <button type="submit" class="btn-login" id="terms-signUp">
                                     가입
                                 </button>
                             </div>
