--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -473,7 +473,7 @@ html {height: 100%;}
       }
 
       .searchlist > a >  div:nth-child(2) > div {
-        width: 252px;
+        width: 245px;
         height: auto;
         display: block;
         box-sizing: border-box;
@@ -481,7 +481,7 @@ html {height: 100%;}
       }
 
       .searchlist > a > div:nth-child(2) > div:nth-child(1) > h3 {
-        width: 252px;
+        width: 245px;
         height: 18px;
         font-size: 16px;
         margin-bottom: 3px;
@@ -489,9 +489,15 @@ html {height: 100%;}
       }
 
       .searchlist > a > div:nth-child(2) > div:nth-child(2) > h8 {
-        width: 252px;
+        width: 245px;
         height: 18px;
         font-size: 14px;
+      }
+
+      .searchlist > a > div:nth-child(2) > div:nth-child(2){
+          overflow: hidden;
+          text-overflow:ellipsis;
+          white-space:nowrap;
       }
 
       .searchlist > a > div:nth-child(3){
