--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -132,7 +132,8 @@
             <div class="bottom_icons">
               <div class="left_icons">
                 <!-- 좋아요 버튼 -->
-                <div id="articleLike" class="sprite_heart_icon_outline" th:data-no="${user.no}"></div>
+                <div id="articleLike" class="artLike sprite_heart_icon_outline" th:data-no="${user.no}"></div>
+
                 <!-- 댓글 리스트 버튼 -->
                 <div class="sprite_bubble_icon"></div>
 
