--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -105,7 +105,7 @@ input, textarea {outline: none;}
 #pro > section > .myList > .pic {
     float:left;
     width: 300px;
-    height: 300px;
+    min-height: 300px;
     overflow: hidden;
     margin: 5px; 
     overflow: hidden;
