--- a/HTML/css/chat.css
+++ b/HTML/css/chat.css
@@ -161,7 +161,7 @@ li > img{
     left:0;
     right:0;
     bottom:0; 
-    display: flex;
+    display: none;
     padding: 15px;
 }
 
@@ -445,5 +445,5 @@ li > img{
     line-height: 18px;
     margin: -3px 0 -4px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-
 }
+
